--- a/cs4440project/csv/filtering.ipynb
+++ b/cs4440project/csv/filtering.ipynb
@@ -16,13 +16,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "outputs": [],
@@ -30,11 +23,7 @@
     "clubs = pd.read_csv('clubs.csv')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-12T17:35:59.019920Z",
-     "end_time": "2023-04-12T17:35:59.031173Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -45,11 +34,7 @@
     "competitions = pd.read_csv('competitions.csv')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-12T17:36:13.800446Z",
-     "end_time": "2023-04-12T17:36:13.824348Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -60,11 +45,7 @@
     "game_events = pd.read_csv('game_events.csv')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-12T17:36:28.960575Z",
-     "end_time": "2023-04-12T17:36:29.259821Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -75,11 +56,7 @@
     "games = pd.read_csv('games.csv')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-12T17:36:37.444550Z",
-     "end_time": "2023-04-12T17:36:37.633950Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -90,31 +67,27 @@
     "players = pd.read_csv('players.csv')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-12T17:36:47.340177Z",
-     "end_time": "2023-04-12T17:36:47.500939Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "outputs": [],
    "source": [
-    "competitions_codes = ['bundesliga','laliga', 'ligue-1', 'premier-league', 'serie-a']"
+    "competitions_codes = ['premier-league', 'bundesliga','laliga', 'ligue-1', 'serie-a']"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-12T17:56:34.110635Z",
-     "end_time": "2023-04-12T17:56:34.114140Z"
+     "start_time": "2023-04-12T18:11:23.226526Z",
+     "end_time": "2023-04-12T18:11:23.229426Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "competitions_filtered = competitions[competitions['competition_code'].isin(competitions_codes)]"
@@ -122,43 +95,159 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-12T18:01:22.564380Z",
-     "end_time": "2023-04-12T18:01:22.567806Z"
+     "start_time": "2023-04-12T18:11:28.736853Z",
+     "end_time": "2023-04-12T18:11:28.741145Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   competition_id competition_code            name             type  \\\n0              L1       bundesliga      Bundesliga  domestic_league   \n8             ES1           laliga          Laliga  domestic_league   \n14            FR1          ligue-1         Ligue 1  domestic_league   \n16            GB1   premier-league  Premier League  domestic_league   \n\n      sub_type  country_id country_name  country_latitude  country_longitude  \\\n0   first_tier          40      Germany         51.163818          10.447831   \n8   first_tier         157        Spain         39.326068          -4.837979   \n14  first_tier          50       France         46.603354           1.888334   \n16  first_tier         189      England         52.531021          -1.264906   \n\n   domestic_league_code confederation  \\\n0                    L1        europa   \n8                   ES1        europa   \n14                  FR1        europa   \n16                  GB1        europa   \n\n                                                  url  \n0   https://www.transfermarkt.co.uk/bundesliga/sta...  \n8   https://www.transfermarkt.co.uk/laliga/startse...  \n14  https://www.transfermarkt.co.uk/ligue-1/starts...  \n16  https://www.transfermarkt.co.uk/premier-league...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>competition_id</th>\n      <th>competition_code</th>\n      <th>name</th>\n      <th>type</th>\n      <th>sub_type</th>\n      <th>country_id</th>\n      <th>country_name</th>\n      <th>country_latitude</th>\n      <th>country_longitude</th>\n      <th>domestic_league_code</th>\n      <th>confederation</th>\n      <th>url</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>L1</td>\n      <td>bundesliga</td>\n      <td>Bundesliga</td>\n      <td>domestic_league</td>\n      <td>first_tier</td>\n      <td>40</td>\n      <td>Germany</td>\n      <td>51.163818</td>\n      <td>10.447831</td>\n      <td>L1</td>\n      <td>europa</td>\n      <td>https://www.transfermarkt.co.uk/bundesliga/sta...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>ES1</td>\n      <td>laliga</td>\n      <td>Laliga</td>\n      <td>domestic_league</td>\n      <td>first_tier</td>\n      <td>157</td>\n      <td>Spain</td>\n      <td>39.326068</td>\n      <td>-4.837979</td>\n      <td>ES1</td>\n      <td>europa</td>\n      <td>https://www.transfermarkt.co.uk/laliga/startse...</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>FR1</td>\n      <td>ligue-1</td>\n      <td>Ligue 1</td>\n      <td>domestic_league</td>\n      <td>first_tier</td>\n      <td>50</td>\n      <td>France</td>\n      <td>46.603354</td>\n      <td>1.888334</td>\n      <td>FR1</td>\n      <td>europa</td>\n      <td>https://www.transfermarkt.co.uk/ligue-1/starts...</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>GB1</td>\n      <td>premier-league</td>\n      <td>Premier League</td>\n      <td>domestic_league</td>\n      <td>first_tier</td>\n      <td>189</td>\n      <td>England</td>\n      <td>52.531021</td>\n      <td>-1.264906</td>\n      <td>GB1</td>\n      <td>europa</td>\n      <td>https://www.transfermarkt.co.uk/premier-league...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 49,
+   "outputs": [],
    "source": [
-    "competitions_filtered"
+    "competitions_filtered.to_csv('competitions_filtered.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-12T18:03:44.330805Z",
-     "end_time": "2023-04-12T18:03:44.343663Z"
+     "start_time": "2023-04-12T21:59:02.906530Z",
+     "end_time": "2023-04-12T21:59:03.102446Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "outputs": [],
-   "source": [],
+   "source": [
+    "competition_ids = ['GB1', 'L1', 'ES1', 'FR1', 'IT1']"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T21:33:46.553442Z",
+     "end_time": "2023-04-12T21:33:46.555924Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "clubs_filtered = clubs[clubs['domestic_competition_id'].isin(competition_ids)]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T21:36:16.547791Z",
+     "end_time": "2023-04-12T21:36:16.556415Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [],
+   "source": [
+    "clubs_filtered.to_csv('clubs_filtered.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:00:23.758900Z",
+     "end_time": "2023-04-12T22:00:23.770394Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [
+    "players_filtered = players[players['current_club_id'].isin(clubs_filtered['club_id'])]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:06:33.049794Z",
+     "end_time": "2023-04-12T22:06:33.130453Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "players_filtered.to_csv('players_filtered.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:08:33.725984Z",
+     "end_time": "2023-04-12T22:08:33.852054Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [],
+   "source": [
+    "games_filtered = games[games['competition_id'].isin(competition_ids)]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:17:05.612802Z",
+     "end_time": "2023-04-12T22:17:05.631347Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "games_filtered.to_csv('games_filtered.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:17:13.733178Z",
+     "end_time": "2023-04-12T22:17:13.876532Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "game_events_filtered = game_events[game_events['game_id'].isin(games_filtered['game_id'])]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:21:48.537593Z",
+     "end_time": "2023-04-12T22:21:48.598686Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "outputs": [],
+   "source": [
+    "game_events_filtered.to_csv('game_events_filtered.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-12T22:22:53.673456Z",
+     "end_time": "2023-04-12T22:22:54.160129Z"
+    }
    }
   }
  ],
