Filtered 2012 out of games

--- a/cs4440project/csv/filtering.ipynb
+++ b/cs4440project/csv/filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -10,14 +10,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:00.247486Z",
-     "end_time": "2023-04-13T01:56:00.256651Z"
+     "start_time": "2023-04-30T11:44:19.839952Z",
+     "end_time": "2023-04-30T11:44:19.854157Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "clubs = pd.read_csv('clubs.csv')"
@@ -25,14 +25,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:00.506876Z",
-     "end_time": "2023-04-13T01:56:00.517694Z"
+     "start_time": "2023-04-30T11:30:00.809818Z",
+     "end_time": "2023-04-30T11:30:00.821328Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "competitions = pd.read_csv('competitions.csv')"
@@ -40,14 +40,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:00.753040Z",
-     "end_time": "2023-04-13T01:56:00.757537Z"
+     "start_time": "2023-04-30T11:30:01.438673Z",
+     "end_time": "2023-04-30T11:30:01.448578Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "game_events = pd.read_csv('game_events.csv')"
@@ -55,14 +55,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:01.030797Z",
-     "end_time": "2023-04-13T01:56:01.296473Z"
+     "start_time": "2023-04-30T11:49:34.810546Z",
+     "end_time": "2023-04-30T11:49:35.103682Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "games = pd.read_csv('games.csv')"
@@ -70,14 +70,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:01.309258Z",
-     "end_time": "2023-04-13T01:56:01.496456Z"
+     "start_time": "2023-04-30T11:48:08.877934Z",
+     "end_time": "2023-04-30T11:48:09.109036Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "players = pd.read_csv('players.csv')"
@@ -85,14 +85,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:01.591664Z",
-     "end_time": "2023-04-13T01:56:01.724289Z"
+     "start_time": "2023-04-30T11:32:05.349200Z",
+     "end_time": "2023-04-30T11:32:05.529870Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "competitions_codes = ['premier-league', 'bundesliga','laliga', 'ligue-1', 'serie-a']"
@@ -100,14 +100,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:01.864332Z",
-     "end_time": "2023-04-13T01:56:01.869629Z"
+     "start_time": "2023-04-30T11:30:04.313080Z",
+     "end_time": "2023-04-30T11:30:04.317414Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "competitions_filtered = competitions[competitions['competition_code'].isin(competitions_codes)]"
@@ -115,14 +115,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:02.197686Z",
-     "end_time": "2023-04-13T01:56:02.200257Z"
+     "start_time": "2023-04-30T11:30:05.010586Z",
+     "end_time": "2023-04-30T11:30:05.014430Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "competitions_filtered = competitions_filtered.drop(columns=['competition_code','type','sub_type','country_id','country_name','country_latitude','country_longitude','domestic_league_code','confederation','url'])"
@@ -130,23 +130,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:02.530250Z",
-     "end_time": "2023-04-13T01:56:02.537567Z"
+     "start_time": "2023-04-30T11:30:05.636584Z",
+     "end_time": "2023-04-30T11:30:05.642154Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "competitions_filtered.to_csv('competitions.csv',index=False)"
@@ -154,14 +145,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:02.876257Z",
-     "end_time": "2023-04-13T01:56:02.881471Z"
+     "start_time": "2023-04-30T11:30:06.332858Z",
+     "end_time": "2023-04-30T11:30:06.342158Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "competition_ids = ['GB1', 'L1', 'ES1', 'FR1', 'IT1']"
@@ -169,14 +160,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:03.570929Z",
-     "end_time": "2023-04-13T01:56:03.580723Z"
+     "start_time": "2023-04-30T11:30:07.070213Z",
+     "end_time": "2023-04-30T11:30:07.081620Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "clubs_filtered = clubs[clubs['domestic_competition_id'].isin(competition_ids)]"
@@ -184,14 +175,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:03.919084Z",
-     "end_time": "2023-04-13T01:56:03.924199Z"
+     "start_time": "2023-04-30T11:30:08.961711Z",
+     "end_time": "2023-04-30T11:30:08.971250Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "clubs_filtered = clubs_filtered.drop(columns=['total_market_value','squad_size','average_age','foreigners_number','foreigners_percentage','national_team_players','net_transfer_record','coach_name','url'])"
@@ -199,14 +190,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:04.198290Z",
-     "end_time": "2023-04-13T01:56:04.204070Z"
+     "start_time": "2023-04-30T11:30:09.577787Z",
+     "end_time": "2023-04-30T11:30:09.585704Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "clubs_filtered.to_csv('clubs.csv',index=False)"
@@ -214,14 +205,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:04.489816Z",
-     "end_time": "2023-04-13T01:56:04.493982Z"
+     "start_time": "2023-04-30T11:30:10.039439Z",
+     "end_time": "2023-04-30T11:30:10.048701Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "players_filtered = players[players['current_club_id'].isin(clubs_filtered['club_id'])]"
@@ -229,14 +220,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:04.768889Z",
-     "end_time": "2023-04-13T01:56:04.773268Z"
+     "start_time": "2023-04-30T11:32:10.479928Z",
+     "end_time": "2023-04-30T11:32:10.491455Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "players_filtered = players_filtered.drop(columns=['current_club_name','country_of_birth','city_of_birth','sub_position','market_value_in_eur','highest_market_value_in_eur','agent_name','contract_expiration_date','current_club_domestic_competition_id','first_name','last_name','player_code','image_url','last_season','url'])"
@@ -244,14 +235,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:05.029382Z",
-     "end_time": "2023-04-13T01:56:05.031470Z"
+     "start_time": "2023-04-30T11:32:11.563771Z",
+     "end_time": "2023-04-30T11:32:11.569348Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "players_filtered.to_csv('players.csv',index=False)"
@@ -259,14 +250,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:05.358049Z",
-     "end_time": "2023-04-13T01:56:05.384678Z"
+     "start_time": "2023-04-30T11:32:12.992685Z",
+     "end_time": "2023-04-30T11:32:13.039762Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "games_filtered = games[games['competition_id'].isin(competition_ids)]"
@@ -274,14 +265,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:05.730141Z",
-     "end_time": "2023-04-13T01:56:05.738100Z"
+     "start_time": "2023-04-30T11:48:16.792011Z",
+     "end_time": "2023-04-30T11:48:16.817524Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "games_filtered = games_filtered.drop(columns=['competition_type','round','aggregate','home_club_position','away_club_position','club_home_name','club_away_name','home_club_manager_name','away_club_manager_name','referee','url'])"
@@ -289,14 +280,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:06.140563Z",
-     "end_time": "2023-04-13T01:56:06.143303Z"
+     "start_time": "2023-04-30T11:48:17.573224Z",
+     "end_time": "2023-04-30T11:48:17.577949Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 78,
+   "outputs": [],
+   "source": [
+    "games_filtered = games_filtered.drop(games_filtered[games_filtered.season == 2012].index)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T11:48:18.332178Z",
+     "end_time": "2023-04-30T11:48:18.339142Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "games_filtered.to_csv('games.csv',index=False)"
@@ -304,14 +310,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:06.427569Z",
-     "end_time": "2023-04-13T01:56:06.480762Z"
+     "start_time": "2023-04-30T11:48:21.258398Z",
+     "end_time": "2023-04-30T11:48:21.323217Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "game_events_filtered = game_events[game_events['game_id'].isin(games_filtered['game_id'])]"
@@ -319,29 +325,59 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:06.756316Z",
-     "end_time": "2023-04-13T01:56:06.774369Z"
+     "start_time": "2023-04-30T11:49:42.237125Z",
+     "end_time": "2023-04-30T11:49:42.282524Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 82,
    "outputs": [],
    "source": [
-    "game_events_filtered = game_events_filtered.drop(columns=['type','club_id','player_id','description','player_in_id'])"
+    "game_events_filtered = game_events_filtered.drop(columns=['type','club_id','description','player_in_id'])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:07.129782Z",
-     "end_time": "2023-04-13T01:56:07.132834Z"
+     "start_time": "2023-04-30T11:49:45.322503Z",
+     "end_time": "2023-04-30T11:49:45.325835Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 85,
+   "outputs": [],
+   "source": [
+    "event_id = [*range(0, 163944, 1)]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T11:50:05.908071Z",
+     "end_time": "2023-04-30T11:50:05.909817Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "outputs": [],
+   "source": [
+    "game_events_filtered['event_id'] = event_id"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T11:50:06.878301Z",
+     "end_time": "2023-04-30T11:50:06.936249Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "outputs": [],
    "source": [
     "game_events_filtered.to_csv('game_events.csv',index=False)"
@@ -349,8 +385,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-13T01:56:07.641510Z",
-     "end_time": "2023-04-13T01:56:07.794415Z"
+     "start_time": "2023-04-30T11:50:07.796605Z",
+     "end_time": "2023-04-30T11:50:08.015457Z"
     }
    }
   },
