--- a/cs4440project/csv/filtering.ipynb
+++ b/cs4440project/csv/filtering.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "game_events = pd.read_csv('game_events.csv')"
@@ -55,8 +55,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-30T11:49:34.810546Z",
-     "end_time": "2023-04-30T11:49:35.103682Z"
+     "start_time": "2023-04-30T16:43:56.174095Z",
+     "end_time": "2023-04-30T16:43:56.546040Z"
     }
    }
   },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "outputs": [],
    "source": [
     "game_events_filtered = game_events[game_events['game_id'].isin(games_filtered['game_id'])]"
@@ -325,14 +325,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-30T11:49:42.237125Z",
-     "end_time": "2023-04-30T11:49:42.282524Z"
+     "start_time": "2023-04-30T16:44:02.258590Z",
+     "end_time": "2023-04-30T16:44:02.294404Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
+   "outputs": [],
+   "source": [
+    "game_events_filtered = game_events_filtered.drop(game_events_filtered[game_events_filtered.type != 'Goals'].index)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-30T16:44:03.723659Z",
+     "end_time": "2023-04-30T16:44:03.749116Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "outputs": [],
    "source": [
     "game_events_filtered = game_events_filtered.drop(columns=['type','club_id','description','player_in_id'])"
@@ -340,29 +355,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-30T11:49:45.322503Z",
-     "end_time": "2023-04-30T11:49:45.325835Z"
+     "start_time": "2023-04-30T16:44:04.974306Z",
+     "end_time": "2023-04-30T16:44:04.978102Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 94,
    "outputs": [],
    "source": [
-    "event_id = [*range(0, 163944, 1)]"
+    "event_id = [*range(0, 48720, 1)]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-30T11:50:05.908071Z",
-     "end_time": "2023-04-30T11:50:05.909817Z"
+     "start_time": "2023-04-30T16:44:27.031872Z",
+     "end_time": "2023-04-30T16:44:27.051581Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "outputs": [],
    "source": [
     "game_events_filtered['event_id'] = event_id"
@@ -370,14 +385,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-30T11:50:06.878301Z",
-     "end_time": "2023-04-30T11:50:06.936249Z"
+     "start_time": "2023-04-30T16:44:27.490436Z",
+     "end_time": "2023-04-30T16:44:27.517280Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "game_events_filtered.to_csv('game_events.csv',index=False)"
@@ -385,8 +400,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-30T11:50:07.796605Z",
-     "end_time": "2023-04-30T11:50:08.015457Z"
+     "start_time": "2023-04-30T16:44:28.768772Z",
+     "end_time": "2023-04-30T16:44:28.854989Z"
     }
    }
   },
